[package]
name = "aulon2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bbrdb = { git = "https://github.com/Jhynjhiruu/bbrdb.git" }
byte-unit = "4.0.19"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive", "cargo"] }
rustyline = "11.0.0"

[features]
#default = ["writing"]
default = []
patched = ["bbrdb/patched"]
writing = ["bbrdb/writing"]
raw_access = ["bbrdb/raw_access"]
